src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: events-service
          image: ghcr.io/lobovvit/architecture-pro-cinemaabyss/events-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /api/events/health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/events/health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
spec:
  type: ClusterIP
  selector:
    app: events-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
