src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
  namespace: cinemaabyss
  labels:
    app: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: proxy-service
          image: ghcr.io/lobovvit/architecture-pro-cinemaabyss/proxy-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cinemaabyss
  labels:
    app: proxy-service
spec:
  type: ClusterIP
  selector:
    app: proxy-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
