src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinemaabyss-ingress
  namespace: cinemaabyss
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: cinemaabyss.example.com
      http:
        paths:
          # 🔹 Все /api/events... → events-service
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: events-service
                port:
                  number: 8082

          # 🔹 Платежи монолита
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: monolith
                port:
                  number: 8080

          # 🔹 Подписки монолита
          - path: /api/subscriptions
            pathType: Prefix
            backend:
              service:
                name: monolith
                port:
                  number: 8080

          # 🔹 Всё остальное API → через proxy
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 8000
